Add shadows and boxes to projects

--- a/styles/palette.scss
+++ b/styles/palette.scss
@@ -4,6 +4,7 @@ $primaryDark: #1a936fff;
 $primary: #88d498ff;
 $primaryLight: #c6dabfff;
 $light: #f3e9d2ff;
+$lightDarker: rgb(247, 232, 220);
 
 /* GRADIENT */
 $gradient-top: linear-gradient(
