--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -28,6 +28,11 @@ p {
     font-family: "Space Mono", monospace;
 }
 
+h1 {
+    font-size: 2rem;
+    text-shadow: 3px 3px 0px $secondary;
+}
+
 #hero {
     display: flex;
     flex-direction: column;
@@ -67,7 +72,7 @@ p {
     }
 
     #scroll-icon {
-        width: 2vw;
+        width: 20px;
         fill: $light;
         // width: 10vw;
         position: absolute;
@@ -78,25 +83,31 @@ p {
 }
 
 #projects-section {
+    max-width: 1200px;
+    margin: 0 auto;
     padding: 1vw;
-    border-radius: 10px;
 
+    #projects-content {
+        margin: 0 5%;
+    }
     #projects-header {
         font-size: 2rem;
         text-shadow: 3px 3px 0px $secondary;
-        margin: 30px;
     }
     ul {
         list-style-type: none;
         margin: 0;
         padding: 0;
+
+        li {
+            margin: 30px 0;
+        }
     }
 }
 
 .light-box {
     padding: 20px;
-    margin: 30px;
-    border-radius: 15px;
+    border-radius: 10px;
     box-shadow: 10px 10px 0px $secondary;
     background-color: $light;
     color: $secondary;
