Add blog section and make the design responsive

--- a/styles/palette.scss
+++ b/styles/palette.scss
@@ -1,5 +1,6 @@
 /* HEX */
 $secondary: #114b5fff;
+$secondaryLight: rgb(23, 79, 88);
 $primaryDark: #1a936fff;
 $primary: #88d498ff;
 $primaryLight: #c6dabfff;
