--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -69,7 +69,7 @@ h1 {
             li {
                 @include sm {
                     display: inline;
-                    margin-right: 1rem;
+                    margin-right: 1.5rem;
                 }
                 margin-bottom: 1rem;
 
@@ -85,11 +85,11 @@ h1 {
     #scroll-icon {
         width: 20px;
         fill: $light;
-        // width: 10vw;
         position: absolute;
-        margin-left: -1vw;
+        margin-left: -20px;
         left: 50%;
         bottom: 5vh;
+        padding: 10px;
     }
 }
 
@@ -108,6 +108,7 @@ h1 {
         flex-wrap: wrap;
         align-items: center;
         h3 {
+            margin-bottom: 0;
             min-width: 40%;
         }
     }
