Link visual clarity and landing animation

--- a/styles/mixins.scss
+++ b/styles/mixins.scss
@@ -36,3 +36,11 @@ $screen-xl-min: 1200px;
         @content;
     }
 }
+
+@mixin transform($transforms) {
+    -moz-transform: $transforms;
+    -o-transform: $transforms;
+    -ms-transform: $transforms;
+    -webkit-transform: $transforms;
+    transform: $transforms;
+}
