--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -34,11 +34,27 @@ a {
     outline: none;
     text-decoration: underline dotted;
     color: inherit;
+
+    &:hover {
+        color: $primaryDark;
+    }
 }
 
 h1 {
     font-size: 2rem;
     text-shadow: 3px 3px 0px $secondary;
+}
+
+@keyframes fadeInUp {
+    0% {
+        opacity: 0;
+        @include transform(translateY(-110%));
+    }
+
+    100% {
+        opacity: 1;
+        @include transform(translateY(0%));
+    }
 }
 
 #hero {
@@ -67,8 +83,9 @@ h1 {
             padding: 0;
             overflow: hidden;
             li {
+                display: block;
                 @include sm {
-                    display: inline;
+                    display: inline-block;
                     margin-right: 1.5rem;
                 }
                 margin-bottom: 1rem;
@@ -78,6 +95,14 @@ h1 {
                     text-decoration: none;
                 }
                 font-size: 1.5rem;
+            }
+            @for $i from 1 through 3 {
+                li:nth-child(#{$i}) {
+                    animation-name: fadeInUp;
+                    animation-duration: 0.7s;
+                    animation-delay: #{($i - 1) * 0.4 + 0.3}s;
+                    animation-fill-mode: both;
+                }
             }
         }
     }
@@ -118,10 +143,6 @@ h1 {
             margin: 0;
             margin-right: 20px;
             font-size: 1.5rem;
-
-            a {
-                color: $secondary;
-            }
         }
 
         li:last-child {
