Update about links to be responsive

--- a/src/components/About/styles.module.scss
+++ b/src/components/About/styles.module.scss
@@ -1,8 +1,18 @@
+@use "/src/mixins" as *;
+
 .section {
   padding-top: 1rem;
 }
 
 .links {
+  @include md {
+    flex-direction: column;
+
+    a {
+      margin-bottom: 0.5rem;
+    }
+  }
+
   display: flex;
   flex-direction: row;
   justify-content: center;
